<resources>
    <string name="app_name">Laakintapaivakirja</string>
    <string name="title_home">Muistutus Lääkkeistä</string>
    <string name="title_dashboard">Profiili</string>
    <string name="title_notifications">Notifications</string>
    <string name="age">Ikä:</string>
    <string name="name">Nimi:</string>
    <string name="SetNameAndAge">TextView</string>
    <string name="profile_information">Profiilin tiedot:</string>
    <string name="todo_profile">TODO</string>
    <string name="user_profile">Käyttäjäprofiili</string>
</resources>