<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/UserProfile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.dashboard.DashboardFragment">

    <Button
        android:id="@+id/buttonOK"
        android:layout_width="141dp"
        android:layout_height="43dp"
        android:layout_marginTop="58dp"
        android:layout_marginBottom="148dp"
        android:foreground="@drawable/ok_button"
        android:text="@android:string/ok"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextAge" />

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="353dp"
        android:layout_height="67dp"
        android:layout_marginTop="52dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:text="@string/name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_dashboard" />

    <EditText
        android:id="@+id/editTextAge"
        android:layout_width="355dp"
        android:layout_height="64dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="number"
        android:text="@string/age"
        app:layout_constraintBottom_toTopOf="@+id/buttonOK"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextName"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/text_dashboard"
        android:layout_width="411dp"
        android:layout_height="292dp"
        android:background="@android:drawable/screen_background_dark_transparent"
        android:backgroundTint="#02FAF2"
        android:gravity="clip_horizontal"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvShowNameAndAge"
        android:layout_width="340dp"
        android:layout_height="190dp"
        android:background="@android:drawable/divider_horizontal_textfield"
        android:gravity="center_horizontal"
        android:text="@string/SetNameAndAge"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/text_dashboard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/text_dashboard" />

    <ImageView
        android:id="@+id/imageViewProfile"
        android:layout_width="146dp"
        android:layout_height="137dp"
        android:contentDescription="@string/todo_profile"
        app:layout_constraintBottom_toBottomOf="@+id/tvShowNameAndAge"
        app:layout_constraintEnd_toEndOf="@+id/tvShowNameAndAge"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="@+id/tvShowNameAndAge"
        app:layout_constraintTop_toTopOf="@+id/tvShowNameAndAge"
        app:layout_constraintVertical_bias="0.698"
        app:srcCompat="@drawable/profile" />

    <TextView
        android:id="@+id/tvProfileInf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_information"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_dashboard" />
</androidx.constraintlayout.widget.ConstraintLayout>